--- a/pytennessee-2019/11.experiment.md
+++ b/pytennessee-2019/11.experiment.md
@@ -1,9 +1,25 @@
+So, we've covered more or less all you need to get started with games, now to
+expand on my second point: Games provide you a test space that is almost
+endlessly deep to experiment in.
 
-Built an MVC framework in a week
+I, personally, have used games as a place to learn more complex software
+engineering principles. For a pyweek one year, I used a handful of tutorials
+and a lot of experimentation to build an MVC framework for a little RPG project.
+
+I didn't finish the game, but I did have a functioning framework at the end.
+
+So if anyone is familiar with this book:
 
     Programming Patterns
 
-Optimizing
+There's a similar one that's a really great read:
 
     Game Programming Patterns
 
+There's a lot of material in these two that can be applied directly to video
+games. And once you're done there, you can start trying to optimize your games,
+which means experimenting with your algorithms to make your choke points faster.
+
+And as you become more familiar with your favored tools, you can even start
+identifying ways to improve the tools you use. I've submitted a few bugs to
+Pygame over the years where the API didn't work.
